Reworking ConfigModel for V2, reworked TextTransformationHelper to be a static instance accessible from anywhere as TextTransformationSession

--- a/Zirpl.AppEngine.Net45/Zirpl.AppEngine.Net45.csproj
+++ b/Zirpl.AppEngine.Net45/Zirpl.AppEngine.Net45.csproj
@@ -216,8 +216,8 @@
     <Compile Include="..\Zirpl.AppEngine\Model\IAuditable.cs">
       <Link>Model\IAuditable.cs</Link>
     </Compile>
-    <Compile Include="..\Zirpl.AppEngine\Model\IKeyedEntity.cs">
-      <Link>Model\IKeyedEntity.cs</Link>
+    <Compile Include="..\Zirpl.AppEngine\Model\IIdable.cs">
+      <Link>Model\IIdable.cs</Link>
     </Compile>
     <Compile Include="..\Zirpl.AppEngine\Model\IMarkDeletable.cs">
       <Link>Model\IMarkDeletable.cs</Link>
