--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
@@ -81,6 +81,7 @@
     <Compile Include="TextTemplating\DefaultTransformationHelper.cs" />
     <Compile Include="TextTemplating\IPreprocessedTextTransformation.cs" />
     <Compile Include="TextTemplating\ITextTransformation.cs" />
+    <Compile Include="TextTemplating\TextTransformationSessionBase.cs" />
     <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
     <Compile Include="TextTemplating\TransformationHelperBase.cs" />
     <Compile Include="TextTemplating\OutputFileProperties.cs" />
@@ -185,7 +186,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="PartialTemplateClasses.cs">
+    <Compile Include="V1\PartialTemplateClasses.cs">
       <DependentUpon>PartialTemplateClasses.tt</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -208,18 +209,33 @@
       <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="V1\V1Helper.cs" />
-    <Compile Include="V2\ConfigModel\AppDefinition.cs" />
-    <Compile Include="V2\ConfigModel\StaticLookupValueDefinition.cs">
+    <Compile Include="V2\ConfigModel\AppConfig.cs" />
+    <Compile Include="V2\ConfigModel\EnumConfig.cs" />
+    <Compile Include="V2\ConfigModel\EnumValueConfig.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="V2\ConfigModel\JsonModel\StaticLookupValueDefinitionJson.cs" />
-    <Compile Include="V2\ConfigModel\TransientDomainTypeDefinition.cs" />
-    <Compile Include="V2\ConfigModel\StaticLookupDomainTypeDefinition.cs" />
-    <Compile Include="V2\ConfigModel\PersistableDomainTypeDefinition.cs" />
-    <Compile Include="V2\ConfigModel\DomainTypeDefinitionBase.cs" />
-    <Compile Include="V2\ConfigModel\JsonModel\AppDefinitionJson.cs" />
-    <Compile Include="V2\ConfigModel\JsonModel\DomainTypeDefinitionJson.cs" />
-    <Compile Include="V2\V2Helper.cs">
+    <Compile Include="V2\ConfigModel\JsonModel\EnumValueConfigJson.cs" />
+    <Compile Include="V2\ConfigModel\Parsers\AppConfigParser.cs" />
+    <Compile Include="V2\ConfigModel\Parsers\DomainClassConfigParser.cs" />
+    <Compile Include="V2\ConfigModel\TransientDomainClassConfig.cs" />
+    <Compile Include="V2\ConfigModel\StaticLookupDomainClassConfig.cs" />
+    <Compile Include="V2\ConfigModel\PersistableDomainClassConfig.cs" />
+    <Compile Include="V2\ConfigModel\DomainClassConfigBase.cs" />
+    <Compile Include="V2\ConfigModel\JsonModel\AppConfigJson.cs" />
+    <Compile Include="V2\ConfigModel\JsonModel\DomainClassConfigJson.cs" />
+    <Compile Include="V2\LogHelper.cs" />
+    <Compile Include="V2\Templates\PartialTemplateClasses.cs">
+      <DependentUpon>PartialTemplateClasses.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="V2\Templates\Model\ModelTemplate.cs">
+      <DependentUpon>ModelTemplate.tt</DependentUpon>
+      <SubType>Code</SubType>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+    <Compile Include="V2\TextTransformationSession.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
@@ -297,7 +313,7 @@
       <LastGenOutput>DataServiceTemplate.cs</LastGenOutput>
       <TransformOnBuild>True</TransformOnBuild>
     </None>
-    <None Include="PartialTemplateClasses.tt">
+    <None Include="V1\PartialTemplateClasses.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>PartialTemplateClasses.cs</LastGenOutput>
       <TransformOnBuild>True</TransformOnBuild>
@@ -322,13 +338,19 @@
       <LastGenOutput>ModelTemplate.cs</LastGenOutput>
       <TransformOnBuild>True</TransformOnBuild>
     </None>
+    <None Include="V2\Templates\PartialTemplateClasses.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>PartialTemplateClasses.cs</LastGenOutput>
+    </None>
+    <None Include="V2\Templates\Model\ModelTemplate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ModelTemplate.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="V2\sample json.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="V2\Templates\Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
