--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration.csproj
@@ -54,10 +54,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="_config\ModelProject\Tag.model.xml" />
     <None Include="_config\AppDefinition.app.zae">
       <SubType>Designer</SubType>
     </None>
-    <None Include="_config\ModelProject\Address.domain.zae">
+    <None Include="_config\ModelProject\AddressBase.domain.zae">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="_config\ModelProject\InternationalAddress.domain.zae">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="_config\ModelProject\DomesticAddress.domain.zae">
       <SubType>Designer</SubType>
     </None>
     <Content Include="_config\ModelProject\Catalog\Brand.model.xml" />
@@ -119,7 +126,6 @@
     <Content Include="_config\ModelProject\Subscriptions\SubscriptionPeriod.model.xml" />
     <Content Include="_config\ModelProject\Subscriptions\SubscriptionPeriodType.model.xml" />
     <Content Include="_config\ModelProject\Subscriptions\SubscriptionStatusType.model.xml" />
-    <Content Include="_config\ModelProject\Tag.model.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AppTransform.tt">
