--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
@@ -78,12 +78,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppGenerator.cs" />
-    <Compile Include="TextTemplating\DefaultTransformationHelper.cs" />
     <Compile Include="TextTemplating\IPreprocessedTextTransformation.cs" />
     <Compile Include="TextTemplating\ITextTransformation.cs" />
     <Compile Include="TextTemplating\TextTransformationSessionBase.cs" />
     <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
-    <Compile Include="TextTemplating\TransformationHelperBase.cs" />
     <Compile Include="TextTemplating\OutputFileProperties.cs" />
     <Compile Include="TextTemplating\TextBlock.cs" />
     <Compile Include="TextTemplating\OutputFileBuildActionType.cs" />
@@ -92,128 +90,12 @@
     <Compile Include="TextTemplating\VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextTemplating\LogHelper.cs" />
-    <Compile Include="V1\ConfigModel\AppDefinition.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\DataServiceOptions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\DomainType.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\Entry.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\SerializableOptions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\Property.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\ServiceOptions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\WebOptions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\Templates\DataService\EntityFramework\Mapping\MappingTemplate.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MappingTemplate.tt</DependentUpon>
-    </Compile>
-    <Compile Include="V1\Templates\Model\Customization\CustomFieldValueTemplate.cs">
-      <DependentUpon>CustomFieldValueTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\Model\EnumTemplate.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>EnumTemplate.tt</DependentUpon>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\Common\PeristableModelTestsStrategyTemplate.cs">
-      <DependentUpon>PeristableModelTestsStrategyTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\DataService\DataServicesProviderTemplate.cs">
-      <DependentUpon>DataServicesProviderTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\DataService\EntityFramework\DataContextTemplate.cs">
-      <DependentUpon>DataContextTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\Common\PersistableModelTestsEntityWrapperTemplate.cs">
-      <DependentUpon>PersistableModelTestsEntityWrapperTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\DataService\EntityFramework\DataServiceTestsTemplate.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataServiceTestsTemplate.tt</DependentUpon>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\Service\ServicesProviderTemplate.cs">
-      <DependentUpon>ServicesProviderTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\Service\EntityFramework\ServiceTestsTemplate.cs">
-      <DependentUpon>ServiceTestsTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\Validation\EntityFramework\FluentValidation\ValidatorTemplate.cs">
-      <DependentUpon>ValidatorTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\Service\EntityFramework\ServiceTemplate.cs">
-      <DependentUpon>ServiceTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\Service\ServiceInterfaceTemplate.cs">
-      <DependentUpon>ServiceInterfaceTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\DataService\EntityFramework\DataServiceTemplate.cs">
-      <DependentUpon>DataServiceTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\PartialTemplateClasses.cs">
-      <DependentUpon>PartialTemplateClasses.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\Model\Metadata\Constants\MetadataConstantsTemplate.cs">
-      <DependentUpon>MetadataConstantsTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\DataService\DataServiceInterfaceTemplate.cs">
-      <DependentUpon>DataServiceInterfaceTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="V1\Templates\Model\ModelTemplate.cs">
-      <DependentUpon>ModelTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\V1Helper.cs" />
     <Compile Include="V2\ConfigModel\AppConfig.cs" />
     <Compile Include="V2\ConfigModel\EnumConfig.cs" />
     <Compile Include="V2\ConfigModel\EnumValueConfig.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="V2\ConfigModel\FileToGenerate.cs" />
     <Compile Include="V2\ConfigModel\JsonModel\EnumValueConfigJson.cs" />
     <Compile Include="V2\ConfigModel\Parsers\AppConfigParser.cs" />
     <Compile Include="V2\ConfigModel\Parsers\DomainClassConfigParser.cs" />
@@ -249,90 +131,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="V1\Templates\Model\Customization\CustomFieldValueTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>CustomFieldValueTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\Common\PeristableModelTestsStrategyTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>PeristableModelTestsStrategyTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\DataService\EntityFramework\DataServiceTestsTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DataServiceTestsTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\DataService\DataServicesProviderTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DataServicesProviderTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\Templates\DataService\EntityFramework\DataContextTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DataContextTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\Templates\Tests\Common\PersistableModelTestsEntityWrapperTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>PersistableModelTestsEntityWrapperTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\Service\ServicesProviderTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ServicesProviderTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\Service\EntityFramework\ServiceTestsTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ServiceTestsTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Validation\EntityFramework\FluentValidation\ValidatorTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ValidatorTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\Templates\Service\EntityFramework\ServiceTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ServiceTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\Templates\Service\ServiceInterfaceTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ServiceInterfaceTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\Templates\DataService\EntityFramework\Mapping\MappingTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>MappingTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\Templates\DataService\EntityFramework\DataServiceTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DataServiceTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\PartialTemplateClasses.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>PartialTemplateClasses.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\Templates\Model\EnumTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>EnumTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\Templates\Model\Metadata\Constants\MetadataConstantsTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>MetadataConstantsTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\Templates\DataService\DataServiceInterfaceTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DataServiceInterfaceTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
-    <None Include="V1\Templates\Model\ModelTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ModelTemplate.cs</LastGenOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
     <None Include="V2\Templates\Model\PersistableDomainClassTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>PersistableDomainClassTemplate.cs</LastGenOutput>
