Moved non-version-related functionality to TextTemplating namespace, rounded out AppGenerator

--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
@@ -96,7 +96,7 @@
     <Compile Include="V2\ConfigModel\EnumValueConfig.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="V2\ConfigModel\FileToGenerate.cs" />
+    <Compile Include="TextTemplating\FileToGenerate.cs" />
     <Compile Include="V2\Parsers\JsonModel\EnumValueConfigJson.cs" />
     <Compile Include="V2\Parsers\AppConfigParser.cs" />
     <Compile Include="V2\Parsers\DomainClassConfigParser.cs" />
